# bxu

./: .gitignore  README.md  autorm  clean  ext-clean  git-detached-head  git-hud  gitsum  init-repo.sh  install.sh  latex-clean  split  up
Deprecated/: up-arch
clean/: clean
confs/: confs.c  ht.h
git-hud/: setup.sh
ic/: ic_next.py
src/bat-hud/: README.md  bat-hud.in  meson.build
src/confs/: config.h  config.h.in  ht.c  main.c  meson.build
src/confs/cmd/: cmd.h  context.c  data.c  meson.build  parse_command.c  parse_options.c  util.c
src/confs/sketch/: cmd  conf.example  override  plumbing
src/confs/snap/: snap-action.c  snap-action.h
src/git-hud/: README.md  git-hud  git-hud.in  meson.build  setup.sh
src/ic/: README.md  ic  meson.build  setup.sh
src/laptop-stuff/: README.md  meson.build  setup.sh
utils/: bsplit  change-boot  clean  git-hud
wip/: clean_next.py  ic.py
wip/confs/: conf  confs.c  ht.c  ht.c.test  ht.h  ht2.c
wip/pyaur/: config.bak  pyaur  test
